# TTuiLite

./: .gitmodules  CMakeLists.txt  README.md
demos/sc/default/: main.scd
demos/sc/grainbuf/: main.scd
demos/sc/livecoding/: main.scd
demos/sc/simple/: main.scd
docs/: BUILD.md
pd/: CMakeLists.txt  TTuiPd.cpp  TTuiPd.h
sidekick/: CMakeLists.txt  SKApp.cpp  SKApp.h  SKCallback.h  SKHardwareCallback.cpp  SKHardwareCallback.h  SKOscCallback.cpp
ttuilite/: CMakeLists.txt  TTgpio.cpp  TTgpio.h  TTuiDevice.cpp  TTuiDevice.h  TTuiDeviceNop.cpp
ttuilite/tests/: CMakeLists.txt  ttuitest.cpp
